problems with gaps fixed
idk how i fixed it but all of a sudden it works

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    overflow: hidden;
 }
 
 #grid{
@@ -11,4 +12,8 @@ body{
     width: 100%;
     margin: 0;
     display: flex;
+}
+
+.barrier{
+    background-color: black;
 }
